--- a/styles/style.css
+++ b/styles/style.css
@@ -5,31 +5,7 @@
 }
 
 body {
-    .poppins-thin {
-        font-family: "Poppins", sans-serif;
-        font-weight: 100;
-        font-style: normal;
-      }
-      
-      .poppins-extralight {
-        font-family: "Poppins", sans-serif;
-        font-weight: 200;
-        font-style: normal;
-      }
-      
-      .poppins-light {
-        font-family: "Poppins", sans-serif;
-        font-weight: 300;
-        font-style: normal;
-      }
-      
-      .poppins-regular {
-        font-family: "Poppins", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-      
-      .poppins-medium {
+    .poppins-medium {
         font-family: "Poppins", sans-serif;
         font-weight: 500;
         font-style: normal;
@@ -41,79 +17,16 @@ body {
         font-style: normal;
       }
       
+
+      
       .poppins-bold {
         font-family: "Poppins", sans-serif;
         font-weight: 700;
         font-style: normal;
       }
-      
-      .poppins-extrabold {
-        font-family: "Poppins", sans-serif;
-        font-weight: 800;
-        font-style: normal;
-      }
-      
-      .poppins-black {
-        font-family: "Poppins", sans-serif;
-        font-weight: 900;
-        font-style: normal;
-      }
-      
-      .poppins-thin-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 100;
-        font-style: italic;
-      }
-      
-      .poppins-extralight-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 200;
-        font-style: italic;
-      }
-      
-      .poppins-light-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 300;
-        font-style: italic;
-      }
-      
-      .poppins-regular-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 400;
-        font-style: italic;
-      }
-      
-      .poppins-medium-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 500;
-        font-style: italic;
-      }
-      
-      .poppins-semibold-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 600;
-        font-style: italic;
-      }
-      
-      .poppins-bold-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 700;
-        font-style: italic;
-      }
-      
-      .poppins-extrabold-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 800;
-        font-style: italic;
-      }
-      
-      .poppins-black-italic {
-        font-family: "Poppins", sans-serif;
-        font-weight: 900;
-        font-style: italic;
-      }
-      
 }
+    
+
 .nav-bar {
     display: flex;
     align-items: center;
@@ -124,12 +37,7 @@ body {
 nav {
     flex: 1;
     text-align: right;
-  /*  background-color: steelblue;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: right; */
-  
+ 
 }
 
 nav a {
@@ -149,8 +57,7 @@ nav a {
 
 h1 {
     color: wheat;
-   /* color: steelblue; */
-   /* border-bottom: 2px solid steelblue;  */
+
 }
 
 h2 {
@@ -158,12 +65,6 @@ h2 {
 
 }
 
-img {
-    width: 400px;
-    height: auto;
-    padding: 0;
-    margin: 0 2px;
-}
 
 
 .logo-box img {
@@ -179,16 +80,14 @@ p {
     color: white;
 }
 
-.container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 0 30px 50px;
-}
+
 
 .header {
   /*  background: radial-gradient(steelblue, #113946); /* #052d3b */
     background: radial-gradient(steelblue, #113946); /* #052d3b */
     width: 100%;
+    height: auto;
+    padding-bottom: 80px;
 }
 
 .button-exp {
@@ -244,25 +143,18 @@ main {
 
 
 
-
-@media only screen and(max-width:700px){
-    .nav-bar nav nav a{
-        display: none;
-    }
-}
-
 @media only screen and(max-width:700px){
     main {
-    grid-template-columns: 1fr;
-    display: grid;
-    width: 80%;
-    margin: 0 100px;
-    align-items: center;
-    justify-self: center;
+        grid-template-columns: 1fr;
+        display: grid;
+        width: 80%;
+        margin: 0 100px;
+        align-items: center;
+        justify-self: center;
+    }
 
 }
 
-}
 @media only screen and(max-width:700px){
    main .main-items {
         display: grid;
@@ -331,6 +223,64 @@ aside h2{
     color: #353432;
 }
 
+
+@media only screen and (max-width:700px) {
+    aside {
+        width: 100%;
+        margin: 0;
+    }
+    
+    .listProduct-item img{
+        width: 100%;
+        filter: drop-shadow(0 50px 20px #0009);
+        height: 300px;
+}
+}
+
+@media only screen and (max-width:700px){
+    .listProduct{
+        grid-template-columns: 100%;
+        max-width: 100%;
+        display: grid;
+        grid-gap: 10px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    .listProduct{
+        grid-template-columns: 100%;
+        max-width: 100%;
+        display: grid;
+        grid-gap: 10px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+    .listProduct-item{
+        display: grid;
+        grid-template-rows: 100%;
+       /* width: 100%; */
+        background-color: #EEEEE6;
+        padding: 0;
+        border-radius: 10px;
+        height: auto;
+    }
+    .listProduct-item h2{
+        font-weight: 500;
+        font-size: large;
+        color: black;
+    }
+    .listProduct-item h2{
+        font-weight: 500;
+        font-size: large;
+    }
+    .listProduct-item .price{
+        letter-spacing: 5px;
+        font-size: small;
+        text-align: center;
+        margin-top: 0;
+}
+
+}
+    
 .product-rating {
     margin: auto;
     text-align: center;
@@ -409,71 +359,7 @@ aside h2{
     transform: translateY(-10px);
 }
 
-@media only screen and(max-width:700px){
-    .container {
-        margin: 0;
-        padding: 0;
-    }
-    
-}
 
-@media only screen and (max-width:700px) {
-    aside {
-        width: 100%;
-        margin: 0;
-    }
-    
-    .listProduct-item img{
-        width: 100%;
-        filter: drop-shadow(0 50px 20px #0009);
-        height: 300px;
-}
-}
-
-@media only screen and (max-width:700px){
-    .listProduct{
-        grid-template-columns: 100%;
-        max-width: 100%;
-        display: grid;
-        grid-gap: 10px;
-        margin: auto;
-        margin-bottom: 20px;
-    }
-    .listProduct{
-        grid-template-columns: 100%;
-        max-width: 100%;
-        display: grid;
-        grid-gap: 10px;
-        margin: auto;
-        margin-bottom: 20px;
-    }
-    .listProduct-item{
-        display: grid;
-        grid-template-rows: 100%;
-       /* width: 100%; */
-        background-color: #EEEEE6;
-        padding: 0;
-        border-radius: 10px;
-        height: auto;
-    }
-    .listProduct-item h2{
-        font-weight: 500;
-        font-size: large;
-        color: black;
-    }
-    .listProduct-item h2{
-        font-weight: 500;
-        font-size: large;
-    }
-    .listProduct-item .price{
-        letter-spacing: 5px;
-        font-size: small;
-        text-align: center;
-        margin-top: 0;
-}
-
-}
-    
 
 footer {
     margin-top: 15px;
