--- a/styles/style.css
+++ b/styles/style.css
@@ -106,39 +106,38 @@ p {
 }
 
 
-main {
+.welcome-class {
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
     display: grid;
-    width: 80%;
     margin: 30px 100px 160px;
     align-items: center;
     justify-self: center;
 
-   
 }
 
 
-.main-items {
-    display: grid;
-    min-width: 400px;
+.welcome-items {
+    padding: 5px;
+    font-size: 20px;
+    text-align: center;
+    max-width: 500px;
     height: 200px;
-    padding: 20px 0;
-    margin: 2px 0;
-   
+    margin: auto;
 }
 
-.main-items img{
+.welcome-items img{
     min-width: 700px;
     padding: 0 50px 100px 0;
     margin-right: 200px;
 }
 
-.main-items h1{
+.welcome-items h1{
     max-width: 100%;
     padding: 50px 0 0 0;
 }
 
-.main-items p{
+.welcome-items p{
     max-width: 100%;
     padding: 10px 0 2px 0;
 }
@@ -146,11 +145,11 @@ main {
 
 
 @media only screen and(max-width:700px){
-    main {
+    .welcome-class {
         grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
         display: grid;
-        width: 80%;
-        margin: 0 100px;
+        margin: auto;
         align-items: center;
         justify-self: center;
     }
@@ -158,16 +157,29 @@ main {
 }
 
 @media only screen and(max-width:700px){
-   main .main-items {
-        display: grid;
-        max-width: 200px;
+   .welcome-items {
+      
         height: auto;
         padding: 20px 20px;
-        margin: 2px 0;
-   
-}
+        margin: auto;
+    }
+    .welcome-items img{
+        min-width: 100%;
+        padding: 0 50px 100px 0;
+        margin-right: 200px;
+    }
+
 
 }
+@media only screen and(max-width:700px){
+    .welcome-items h1{
+        font-size: 15px;
+        width: 300px;
+        padding: 50px 0;
+    }
+}
+
+
 
 .listProduct-item img{
     width: 100%;
