--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,11 @@ body {
 }
     
 
+.grid {
+    box-shadow: 0 0 30px gray;  
+   
+}
+
 .nav-bar {
     display: flex;
     align-items: center;
@@ -106,34 +111,31 @@ p {
 }
 
 
-.welcome-class {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    display: grid;
-    margin: 30px 100px 160px;
-    align-items: center;
-    justify-self: center;
 
+.welcome-class {
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    gap: 0;
+    margin: auto;
+    margin-bottom: 40px;
 }
 
 
 .welcome-items {
-    padding: 5px;
-    font-size: 20px;
-    text-align: center;
-    max-width: 500px;
-    height: 200px;
-    margin: auto;
+    background: radial-gradient(steelblue, #113946);
+    padding: 25px;
+    border-radius: 30px;
+    height: 300px;
 }
 
 .welcome-items img{
-    min-width: 700px;
-    padding: 0 50px 100px 0;
-    margin-right: 200px;
+    width: 100%;
+    filter: drop-shadow(0 50px 20px #0009);
+    height: 300px;
 }
 
 .welcome-items h1{
-    max-width: 100%;
+    max-width: 80%;
     padding: 50px 0 0 0;
 }
 
@@ -142,31 +144,38 @@ p {
     padding: 10px 0 2px 0;
 }
 
-
+.main-grid {
+    display: grid;
+    max-width: 900px;
+    padding: 0;
+    margin: 20px;
+}
 
 @media only screen and(max-width:700px){
-    .welcome-class {
+    .welcome-class{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: auto;
+        width: 100%;
         display: grid;
+        grid-gap: 10px;
         margin: auto;
-        align-items: center;
-        justify-self: center;
+        margin-bottom: 20px; 
     }
 
 }
 
 @media only screen and(max-width:700px){
-   .welcome-items {
-      
+    .welcome-items {
+        display: grid;
+        grid-template-rows: 100%;
+        padding: 0;
+        border-radius: 10px;
         height: auto;
-        padding: 20px 20px;
-        margin: auto;
     }
     .welcome-items img{
-        min-width: 100%;
-        padding: 0 50px 100px 0;
-        margin-right: 200px;
+        width: 100%;
+        padding: 0 5px 10px 0;
+        margin: 20px;
     }
 
 
@@ -307,7 +316,7 @@ aside h2{
 .products-title {
     text-align: center;
     margin: 0 auto 60px;
-    position:relative;
+    position: relative;
     line-height: 60px;
     color: #353432;
 }
@@ -324,12 +333,8 @@ aside h2{
     transform: translatex(-50%);
 }
 
-.featured-products-item img{
-    width: 100%;
-    filter: drop-shadow(0 4px 2px #0009);
-    height: 250px;
-    border-radius: 10px;
-}
+
+
 .featured-products{
     max-width: 900px;
     display: grid;
@@ -337,6 +342,13 @@ aside h2{
     gap: 30px;
     margin: 20px auto;
     margin-bottom: 20px;
+}
+
+.featured-products-item img{
+    width: 100%;
+    filter: drop-shadow(0 4px 2px #0009);
+    height: 250px;
+    border-radius: 10px;
 }
 
 .featured-products-item{
@@ -373,6 +385,28 @@ aside h2{
     transform: translateY(-10px);
 }
 
+@media only screen and (max-width:700px){
+    .featured-products{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-gap: 0;
+        margin: 20px auto;
+        margin-bottom: 20px;
+    }
+
+}
+@media only screen and (max-width: 700px){
+    .featured-products-item img{
+        width: 90%;
+        filter: drop-shadow(0 4px 2px #0009);
+        height: 270px;
+        border-radius: 10px;
+        margin: auto;
+    }
+    
+    
+}
 
 
 footer {
@@ -407,3 +441,5 @@ footer {
 .footer-grid-item img {
     width: 40px;
 }
+
+
