--- a/styles/style.css
+++ b/styles/style.css
@@ -89,10 +89,12 @@ p {
 
 .header {
   /*  background: radial-gradient(steelblue, #113946); /* #052d3b */
-    background: radial-gradient(steelblue, #113946); /* #052d3b */
-    width: 100%;
+    background: radial-gradient(rgb(17, 83, 148), #0c0c0c); /* #052d3b */
+    max-width: 1200px;
     height: auto;
     padding-bottom: 120px;
+    padding: 0 40px;
+    
 }
 
 .button-exp {
@@ -113,34 +115,36 @@ p {
 
 
 .welcome-class {
-    display: grid;
-    grid-template-columns:1fr 1fr;
-    gap: 0;
-    margin: auto;
-    margin-bottom: 40px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
 }
 
 
 .welcome-items {
-    background: radial-gradient(steelblue, #113946);
-    padding: 25px;
-    border-radius: 30px;
-    height: 300px;
+    flex-basis: 50%;
+    min-width: 300px;
+    padding: 30px;
+   
 }
 
 .welcome-items img{
-    width: 100%;
+    max-width: 100%;
+    padding: 50px 0;
     filter: drop-shadow(0 50px 20px #0009);
-    height: 300px;
 }
 
 .welcome-items h1{
-    max-width: 80%;
-    padding: 50px 0 0 0;
+    font-size: 50px;
+    line-height: 60px;
+    margin: 25px 0;
+
 }
 
 .welcome-items p{
-    max-width: 100%;
+    max-width: 400px;
     padding: 10px 0 2px 0;
 }
 
@@ -153,8 +157,7 @@ p {
 
 @media only screen and(max-width:700px){
     .welcome-class{
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
+        grid-template-columns: 100%;
         width: 100%;
         display: grid;
         grid-gap: 10px;
@@ -166,11 +169,9 @@ p {
 
 @media only screen and(max-width:700px){
     .welcome-items {
-        display: grid;
-        grid-template-rows: 100%;
         padding: 0;
-        border-radius: 10px;
         height: auto;
+        width: 100%;
     }
     .welcome-items img{
         width: 100%;
@@ -182,9 +183,9 @@ p {
 }
 @media only screen and(max-width:700px){
     .welcome-items h1{
-        font-size: 15px;
+        font-size: 25px;
         width: 300px;
-        padding: 50px 0;
+        padding: 0 50px;
     }
 }
 
@@ -193,7 +194,7 @@ p {
 .listProduct-item img{
     width: 100%;
     filter: drop-shadow(0 50px 20px #0009);
-    height: 260px;
+    height: 280px;
 }
 .listProduct{
     max-width: 900px;
@@ -256,7 +257,8 @@ aside h2{
     .listProduct-item img{
         width: 100%;
         filter: drop-shadow(0 50px 20px #0009);
-        height: 300px;
+        height: auto;
+        padding: 10px;
 }
 }
 
@@ -282,7 +284,7 @@ aside h2{
         grid-template-rows: 100%;
        /* width: 100%; */
         background-color: #EEEEE6;
-        padding: 0;
+        padding: 10px;
         border-radius: 10px;
         height: auto;
     }
