--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,27 +7,11 @@
 }
 
 body {
-    .poppins-medium {
-        font-family: "Poppins", sans-serif;
-        font-weight: 500;
-        font-style: normal;
-      }
-      
-      .poppins-semibold {
-        font-family: "Poppins", sans-serif;
-        font-weight: 600;
-        font-style: normal;
-      }
-      
-
-      
-      .poppins-bold {
-        font-family: "Poppins", sans-serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-}
+    font-family: Arial, Helvetica, sans-serif;
     
+    font-weight: 500;
+    font-style: normal;
+      }   
 
 .grid {
     box-shadow: 0 0 30px gray;  
@@ -62,7 +48,7 @@ nav a {
 
 h1 {
     color: wheat;
-
+    font-family: "Abril Fatface", serif;
 }
 
 h2 {
@@ -201,15 +187,17 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    margin: 10px;
-    margin-bottom: 20px;
+    margin: 10px 100px;
+    margin-bottom: 10px;
+    width: 950px;
+    height: auto;
 }
 
 .listProduct-item{
     background-color: #EEEEE6;
-    padding: 15px;
+    padding: 5px;
     border-radius: 10px;
-    height: 380px;
+    height: 440px;
 }
 .listProduct-item h2{
     font-weight: 500;
@@ -253,7 +241,8 @@ main h2{
         width: 100%;
         filter: drop-shadow(0 50px 20px #0009);
         height: auto;
-        padding: 10px;
+        padding: 5px;
+        border-radius: 30px;
 }
 }
 
@@ -261,20 +250,21 @@ main h2{
 
     .listProduct{
         grid-template-columns: 100%;
-        width: auto;
+        width: 100%;
+        height: auto;
         display: grid;
         grid-gap: 20px;
-        margin: auto;
-        padding: 30px;
+        margin: 10px;
+        padding: 5px;
         margin-bottom: 10px;
     
     }
     .listProduct-item{
-        display: grid;
+       /* display: grid; */
         background-color: #EEEEE6;
-        padding: 10px;
+        padding: 10px 0;
         border-radius: 10px;
-        height: 500px;
+        height: auto;
     }
     .listProduct-item h2{
         font-weight: 500;
@@ -305,7 +295,7 @@ main h2{
 
 .products-title {
     text-align: center;
-    margin: 0 auto 60px;
+    margin: 20px 20px;
     position: relative;
     line-height: 60px;
     color: #353432;
@@ -337,7 +327,7 @@ main h2{
 .featured-products-item img{
     width: 100%;
     filter: drop-shadow(0 4px 2px #0009);
-    height: 250px;
+    height: auto;
     border-radius: 10px;
 }
 
@@ -345,8 +335,9 @@ main h2{
     background-color: #EEEEE6;
     padding: 10px;
     border-radius: 10px;
-    height: 335px;
+    height: auto;
     transition: transform 0.5s;
+    margin: 20px 0;
 }
 .featured-products-item h2{
     font-weight: 500;
@@ -358,7 +349,7 @@ main h2{
     letter-spacing: 5px;
     font-size: small;
     text-align: center;
-    margin-top: 0;
+    margin-top: 10px;
     color: #353432;
 
 }
