--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,8 @@ body {
 .nav-bar {
     display: flex;
     align-items: center;
-    padding: 20px;
+    padding: 5px;
+    filter: drop-shadow(0 50px 30px #0009);
 
 }
 
@@ -38,7 +39,11 @@ nav a {
     font-size: 1.2rem;
     font-weight: 700;
     color: wheat;
-    margin-right: 20px;
+    margin-right: 15px;
+}
+
+nav a:hover {
+    color: #c70958; 
 }
 
 #cart-id {
@@ -58,8 +63,6 @@ h2 {
 
 }
 
-
-
 .logo-box img {
     width: 80px;
     height: auto;
@@ -76,11 +79,14 @@ p {
 
 
 .header {
-    background: radial-gradient(rgb(17, 83, 148), #0c0c0c); 
-    max-width: 1200px;
+   /* background: radial-gradient(rgb(17, 83, 148), #0c0c0c); */
+   background-image: url("../images/background-ese-store.jpeg");
+   background-repeat: no-repeat;
+    max-width: 1300px;
     height: auto;
     padding-bottom: 120px;
     padding: 0 40px;
+    border-bottom: 2px solid black;
     
 }
 
@@ -111,8 +117,17 @@ p {
    /* background-color: rgba(10, 10, 10, 0.906); */
     /*background-color: rgb(7, 66, 114); */
     border-radius: 30px;
-    background: radial-gradient(rgb(7, 66, 114), #0c0c0c); 
-    filter: drop-shadow(0 50px 20px rgba(4, 3, 5, 0.82));
+   /* background: radial-gradient(rgb(7, 66, 114), #0c0c0c); 
+    filter: drop-shadow(0 50px 20px rgba(4, 3, 5, 0.82)); */
+   /* background-image: url("../images/bak1.jpg");
+    background-repeat: repeat-x;
+    background-position: left bottom;
+    background-attachment: scroll; */
+    border-top: 1px solid black;
+    border-left: 5px solid rgb(13, 13, 13);
+   /* border-bottom: 1px solid black; */
+    border-right: 3px dotted rgb(13, 13, 13);
+    padding-right: 0;
 
 } 
 
@@ -416,11 +431,13 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+    background-image: url("../images/background-ese-store.jpeg");
+    background-repeat: no-repeat;
 }
 
 .footer-grid {
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 3fr 1fr;
     grid-gap: 20px;
     padding:  20px;
 }
