--- a/styles/style.css
+++ b/styles/style.css
@@ -76,8 +76,6 @@ p {
     color: white;
 }
 
-
-
 .header {
    /* background: radial-gradient(rgb(17, 83, 148), #0c0c0c); */
    background-image: url("../images/background-ese-store.jpeg");
@@ -287,11 +285,11 @@ main h2{
 
     .listProduct{
         grid-template-columns: 100%;
-        width: 100%;
+        width: 90%;
         height: auto;
         display: grid;
-        grid-gap: 20px;
-        margin: 10px;
+       /* grid-gap: 20px;*/
+        margin: auto;
         padding: 5px;
         margin-bottom: 10px;
     
@@ -299,7 +297,7 @@ main h2{
     .listProduct-item{
        /* display: grid; */
         background-color: #EEEEE6;
-        padding: 10px 0;
+        padding: 5px 0;
         border-radius: 10px;
         height: auto;
     }
@@ -405,22 +403,31 @@ main h2{
 
 @media only screen and (max-width:700px){
     .featured-products{
+        grid-template-columns: 100%;
+        width: 90%;
+        height: auto;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        grid-gap: 0;
-        margin: 20px auto;
-        margin-bottom: 20px;
+       /* grid-gap: 20px;*/
+        margin: auto;
+        padding: 5px;
+        margin-bottom: 10px;
     }
-
+    .featured-products-item{
+       /* display: grid; */
+       background-color: #EEEEE6;
+       padding: 5px 0;
+       border-radius: 10px;
+       height: auto;
+     }
 }
+
 @media only screen and (max-width: 700px){
     .featured-products-item img{
-        width: 90%;
-        filter: drop-shadow(0 4px 2px #0009);
-        height: 270px;
-        border-radius: 10px;
-        margin: auto;
+        width: 100%;
+        filter: drop-shadow(0 50px 20px #0009);
+        height: auto;
+        padding: 5px;
+        border-radius: 30px;
     }
     
     
