--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body {
 
 .grid {
     box-shadow: 0 0 30px gray;  
+    
    
 }
 
@@ -222,10 +223,18 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    margin: 10px 100px;
+    margin: auto;
     margin-bottom: 10px;
-    width: 950px;
+    width: 800px;
     height: auto;
+
+
+  /*  max-width: 900px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    margin: 20px auto;
+    margin-bottom: 20px; */
 }
 
 .listProduct-item{
