--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,14 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    
     font-weight: 500;
     font-style: normal;
-      }   
+}   
 
 .grid {
     box-shadow: 0 0 30px gray;  
     
-   
+    
 }
 
 .nav-bar {
@@ -39,7 +38,7 @@ nav a {
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 700;
-    color: wheat;
+    color: #fff;
     margin-right: 15px;
 }
 
@@ -53,7 +52,7 @@ nav a:hover {
 }
 
 h1 {
-    color: #fff;
+    color:#fff;
     font-family: "Abril Fatface", serif;
     word-spacing: 1rem;
     letter-spacing: 2px;
@@ -78,30 +77,15 @@ p {
 }
 
 .header {
+    background-color: #065577;
    /* background: radial-gradient(rgb(17, 83, 148), #0c0c0c); */
-   background-image: url("../images/background-ese-store.jpeg");
-   background-repeat: no-repeat;
+  /* background-image: url("../images/background-ese-store.jpeg"); */
     max-width: 1300px;
     height: auto;
     padding-bottom: 120px;
     padding: 0 40px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid #0d3354;
     
-}
-
-.button-exp {
-    display: inline-block;
-    background-color: #353432;
-    color: wheat;
-    padding: 8px 30px;
-    margin: 20px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
-    width: 60%;
-}
-
-.button-exp:hover {
-    background: #c70958;
 }
 
 
@@ -122,10 +106,11 @@ p {
     background-repeat: repeat-x;
     background-position: left bottom;
     background-attachment: scroll; */
-    border-top: 1px solid black;
-    border-left: 5px solid rgb(13, 13, 13);
+    border-top: 1px solid #0d3354;
+   /* border-left: 5px solid rgb(13, 13, 13); */
+    border-left: 5px solid #0d3354;
    /* border-bottom: 1px solid black; */
-    border-right: 3px dotted rgb(13, 13, 13);
+    border-right: 3px dotted #0d3354;
     padding-right: 0;
 
 } 
@@ -140,7 +125,7 @@ p {
     background-repeat: repeat-y;
     background-position: right top;
     background-attachment: scroll;
-    padding: 20px;
+    padding: 10px 100px;
 
 }
 
@@ -162,14 +147,42 @@ p {
 .welcome-items h1{
     font-size: 40px;
     line-height: 40px;
-    margin: 30px 0;
+    margin: 30px 10px;
+    text-shadow: 2px 1px 4px black;
 
 }
 
 .welcome-items p{
     max-width: 400px;
-    padding: 10px 0 2px 0;
+    padding: 10px 0 15px 0;
+    margin: 0 10px;
+    text-shadow: 2px 1px 4px black;
+    line-height: 22px;
+    letter-spacing: 0.1rem;
+    
 }
+
+.welcome-items .button-exp {
+    display: inline-block;
+    background-color: #f9c606;
+    color: #353432;
+    font-weight: 700;
+    padding: 8px 30px;
+    margin: auto;
+    border: 3px solid #065577;
+    border-radius: 30px;
+    transition: background 0.5s;
+    width: auto;
+}
+
+.button-exp:hover {
+    background: #fff; 
+    color: #ad412a;
+    border: 2px solid #065577;
+    font-size: 16px;
+
+}
+
 
 .main-grid {
     display: grid;
@@ -205,12 +218,20 @@ p {
     }
 
 
+
 }
 @media only screen and(max-width:700px){
     .welcome-items h1{
         font-size: 20px;
         width: fit-content;
         padding: 0 2px;
+    }
+}
+
+@media only screen and(max-width:600px){
+    .button-exp{
+        margin: auto;
+        align-self: center;
     }
 }
 
@@ -248,7 +269,8 @@ p {
     font-size: small;
     text-align: center;
     margin-top: 0;
-    color: #353432;
+   /* color: #353432; */
+    color: #ad4125;
 
 }
 .listProduct-item button{
@@ -326,6 +348,7 @@ main h2{
 .product-rating {
     margin: auto;
     text-align: center;
+    
 }
 
 .product-rating .fa{
@@ -338,6 +361,7 @@ main h2{
     position: relative;
     line-height: 60px;
     color: #353432;
+   
 }
 
 .products-title::after {
@@ -389,7 +413,8 @@ main h2{
     font-size: small;
     text-align: center;
     margin-top: 10px;
-    color: #353432;
+    /*color: #353432; */
+    color: #ad4125;
 
 }
 .featured-products-item button{
@@ -440,9 +465,10 @@ main h2{
 
 footer {
     margin-top: 15px;
-    border-top: 1px solid #000;
+    border-top: 1px solid #0d3354;
     text-align: center;
-    background-image: url("../images/background-ese-store.jpeg");
+    background-color: #065577;
+   /* background-image: url("../images/background-ese-store.jpeg"); */
     background-repeat: no-repeat;
 }
 
@@ -451,6 +477,7 @@ footer {
     grid-template-columns: 3fr 1fr;
     grid-gap: 20px;
     padding:  20px;
+    
 }
 
 .footer-grid-item {
@@ -458,19 +485,31 @@ footer {
     padding: 2px;
     font-size: 20px;
     text-align: center;
+    background-color: #eee;
 }
 
+
+.footer-grid-item h2 {
+    display: block;
+    padding: 2px;
+    font-size: 16px;
+    text-align: center;
+    color: black;
+    padding: 10px 0;
+}
 
 .footer-grid-item p {
     display: block;
     padding: 2px;
-    font-size: 20px;
+    font-size: 12px;
     text-align: center;
     color: #353432;
+    padding: 10px 0;
 }
 
 .footer-grid-item img {
     width: 40px;
+    padding-top: 10px;
 }
 
 
